<resources>
    <string name="app_name">CoolWeather</string>
    <string name="loading">正在加载中。。。</string>
    <array name="levelArray" >
        <item name="province">省</item>
        <item name="city">市</item>
        <item name="county">县</item>
    </array>

    <string name="city_name">城市名：</string>
    <string name="temperature_range">温度范围：</string>
    <string name="weather_info">天气信息：</string>
    <string name="release_time">发布时间：</string>
    <string name="current_date">今天日期：</string>
</resources>
