<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#00ff00"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/city_name"
            android:id="@+id/textView4"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/tvCityName"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:background="#00f0f0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/temperature_range"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="10~15"
            android:id="@+id/tvTemperature"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:background="#ff00f0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weather_info"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="晴"
            android:id="@+id/tvWeatherInfo"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:background="#0f9fa0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/release_time"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="2016.04.30"
            android:id="@+id/tvPublishTime"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:background="#ffff50">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/current_date"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="2016.04.30"
            android:id="@+id/tvCurrentDate"
            android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>